update tampilan email

--- a/email.html
+++ b/email.html
@@ -1,21 +1,101 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body style="font-family: sans-serif;">
-        <div style="display: block; margin: auto; max-width: 600px;" class="main">
-            <h1 style="font-size: 18px; font-weight: bold; margin-top: 20px">Congrats for sending test email with Mailtrap!</h1>
-            <h1 style="font-size: 18px; font-weight: bold; margin-top: 20px">Halo ${nama_pt}</h1>
-            <p>Inspect it using the tabs you see above and learn how this email can be improved.</p>
-            <img alt="Inspect with Tabs" src="https://assets-examples.mailtrap.io/integration-examples/welcome.png" style="width: 100%;">
-            <p>Now send your email using our fake SMTP server and integration of your choice!</p>
-            <p>Good luck! Hope it works.</p>
+<head>
+    <title>Permintaan Sponsorship</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f6f6f6;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            color: #333;
+        }
+
+        p {
+            color: #555;
+        }
+
+        ul {
+            margin: 10px 0;
+            padding-left: 20px;
+        }
+
+        ul li {
+            color: #555;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 20px;
+        }
+
+        .button:hover {
+            background-color: #0056b3;
+        }
+
+        .banner img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin-bottom: 20px;
+        }
+
+        * {
+            text-align: justify;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="banner">
+            <img src="20230615061229.jpg" alt="Banner Sponsorship">
         </div>
-        <!-- Example of invalid for email html/css, will be detected by Mailtrap: -->
-        <style>
-            .main { background-color: white; }
-            a:hover { border-left-width: 1em; min-height: 2em; }
-        </style>
-    </body>
+
+        <h2>Permintaan Sponsorship</h2>
+        <p>Kepada Manajemen Perusahaan,</p>
+
+        <p>Saya menghubungi Anda untuk mengajukan permintaan sponsorship untuk acara/kampanye kami.</p>
+
+        <p>Informasi tentang acara/kampanye:</p>
+        <ul>
+            <li><strong>Nama Acara/Kampanye:</strong> Dies Natalies IV SMK Telkom Sidoarjo</li>
+            <li><strong>Tanggal dan Waktu:</strong> 18 Oktober 2023</li>
+            <li><strong>Lokasi:</strong> SMK Telkom Sidoarjo</li>
+            <li><strong>Deskripsi:</strong> Kami mengundang Aldi Taher</li>
+        </ul>
+
+        <p>Sponsorship yang kami cari meliputi dukungan finansial atau sumbangan produk. Kami yakin kerja sama ini akan memberikan manfaat yang signifikan bagi perusahaan Anda. Sebagai gantinya, kami akan memberikan eksposur merek yang luas melalui berbagai saluran pemasaran kami.</p>
+
+        <p>Kami ingin mengetahui apakah perusahaan Anda tertarik untuk menjadi sponsor kami. Jika tertarik, kami sangat menghargai kesempatan untuk membahas lebih lanjut detail dan manfaat kerja sama.</p>
+
+        <p>Terlampir kami sertakan proposal sponsorship yang lebih rinci. Silakan merujuk pada proposal tersebut untuk informasi lebih lanjut.</p>
+
+        <p>Jika ada pertanyaan atau permintaan tambahan, jangan ragu untuk menghubungi kami. Kami sangat berharap dapat menjalin kemitraan dengan perusahaan Anda.</p>
+
+        <p>Terima kasih atas perhatian Anda, dan kami menantikan kabar baik dari Anda segera.</p>
+
+        <p>Salam hormat,</p>
+        <p>Isaac Mohammad Razan</p>
+        <p>SIE Sponsorship</p>
+        <p>0812-3456-7890</p>
+
+        <a class="button" href="Proposal.pdf">Lihat Proposal Sponsorship</a>
+    </div>
+</body>
 </html>
