--- a/email.html
+++ b/email.html
@@ -3,6 +3,10 @@
 <head>
     <title>Permintaan Sponsorship</title>
     <style>
+        * {
+            font-family: 'Open Sans', sans-serif;
+        }
+        
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
@@ -60,6 +64,9 @@
             text-align: justify;
         }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
