image over internet file over google drive

--- a/email.html
+++ b/email.html
@@ -71,7 +71,7 @@
 <body>
     <div class="container">
         <div class="banner">
-            <img src="20230615061229.jpg" alt="Banner Sponsorship">
+            <img src="https://s3-ap-southeast-1.amazonaws.com/loket-production-sg/images/banner/20230609093554.jpg" alt="Banner Sponsorship">
         </div>
 
         <h2>Permintaan Sponsorship</h2>
