image over internet file over google drive

--- a/email.html
+++ b/email.html
@@ -77,7 +77,7 @@
         </div>
 
         
-        <p>Kepada Manajemen Perusahaan,</p>
+        <p>Kepada Manajemen Perusahaan, ${nama_pt}</p>
 
         <p>Saya menghubungi Anda untuk mengajukan permintaan sponsorship untuk acara/kampanye kami.</p>
 
