Progress Kamis Pagi 22-06-2023

--- a/email.html
+++ b/email.html
@@ -6,7 +6,6 @@
         * {
             font-family: 'Open Sans', sans-serif;
         }
-        
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
@@ -75,7 +74,7 @@
         </div>
 
         <h2>Permintaan Sponsorship</h2>
-        <p>Kepada Manajemen Perusahaan,</p>
+        <p>Kepada Manajemen Perusahaan ${nama_pt},</p>
 
         <p>Saya menghubungi Anda untuk mengajukan permintaan sponsorship untuk acara/kampanye kami.</p>
 
